# detect-uap-mars

./: .gitignore  LICENSE  README.md  pyproject.toml
dataset/: api-nasa.ipynb  data_prep.ipynb  synthetic-data-gen.ipynb  web-scraping.ipynb
figures/: .$Data pipeline.drawio.dtmp  Data pipeline.drawio
model/: .gitignore  data.yaml  dockerfile  file_descriptions.txt  fix_labels.py  generate_report.py  readme.md  rename_dataset.py  runit.txt
model/runs/train/uap_experiment/: args.yaml
model/runs/train/uap_experiment3/: args.yaml  results.csv
model/runs/train/uap_experiment32/: args.yaml
model/src/: test.py
model/src/Eval/: evaluate.py  metrics.py  visualize.py
model/src/deploy/: deploy_utils.py  export_model.py  inference.py  server.py
model/src/train/: config.py  dataset.py  model.py  train.py  utils.py
